--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
     <title>Document</title>
   </head>
   <body
-    class="min-h-screen bg-gradient-to-r from-sky-500 to-purple-500 p-8 text-xs text-slate-600"
+    class="min-h-screen bg-gradient-to-r from-sky-500 to-purple-500 p-8 text-sm text-slate-600"
   >
     <div class="container mx-auto min-h-screen rounded-2xl bg-white">
       <header class="grid grid-cols-3 items-center border-b px-12 py-5">
@@ -58,6 +58,40 @@
         >
           + New Invoice
         </button>
+      </div>
+      <div class="grid grid-cols-4 divide-x border-b">
+        <div class="p-12 text-xs text-slate-400">
+          <div class="mb-2 flex justify-between font-bold">
+            <h4>Revenue</h4>
+            <p>+4.75%</p>
+          </div>
+          <p class="text-3xl text-slate-950">$405,091.00</p>
+        </div>
+        <div class="p-12 text-xs text-slate-400">
+          <div class="mb-2 flex justify-between font-bold">
+            <h4>Overdue Invoices</h4>
+            <p class="text-red-700">+12.61%</p>
+          </div>
+          <p class="text-3xl text-slate-950">$12,101.00</p>
+        </div>
+        <div class="p-12 text-xs text-slate-400">
+          <div class="mb-2 flex justify-between font-bold">
+            <h4>Outstanding Invoices</h4>
+            <p>-3.25%</p>
+          </div>
+          <p class="text-3xl text-slate-950">$205,222.00</p>
+        </div>
+        <div class="p-12 text-xs text-slate-400">
+          <div class="mb-2 flex justify-between font-bold">
+            <h4>Outstanding Invoices</h4>
+            <p>-3.25%</p>
+          </div>
+          <p class="text-3xl text-slate-950">$22,250.00</p>
+        </div>
+
+        <div></div>
+        <div></div>
+        <div></div>
       </div>
     </div>
   </body>
