--- a/src/index.html
+++ b/src/index.html
@@ -59,7 +59,7 @@
           + New Invoice
         </button>
       </div>
-      <div class="grid grid-cols-4 divide-x border-b">
+      <div class="mb-12 grid grid-cols-4 divide-x border-b">
         <div class="p-12 text-xs text-slate-400">
           <div class="mb-2 flex justify-between font-bold">
             <h4>Revenue</h4>
@@ -84,15 +84,204 @@
         <div class="p-12 text-xs text-slate-400">
           <div class="mb-2 flex justify-between font-bold">
             <h4>Outstanding Invoices</h4>
-            <p>-3.25%</p>
+            <p class="text-red-700">+5.15%</p>
           </div>
           <p class="text-3xl text-slate-950">$22,250.00</p>
         </div>
-
-        <div></div>
-        <div></div>
-        <div></div>
       </div>
+      <div class="border-b border-slate-100 px-12 py-6 font-bold">
+        Recent activitiy
+      </div>
+      <p class="mb-2 border-b border-t bg-gray-50 px-12 py-2 font-bold">
+        Today
+      </p>
+      <ul class="px-12">
+        <li class="grid grid-cols-[50px_repeat(3,_1fr)] py-4">
+          <i class="fa-solid fa-circle-up pt-1"></i>
+          <div>
+            <div class="mb-2 flex gap-x-4">
+              <h4 class="font-bold">$7,600.00</h4>
+              <div
+                class="rounded border-green-200 bg-green-50 px-2 text-xs font-bold text-green-600"
+              >
+                Paid
+              </div>
+            </div>
+            <p class="text-slate-400">$500.00 tax</p>
+          </div>
+          <div>
+            <div class="mb-2 flex">
+              <h4 class="font-bold">Reform</h4>
+            </div>
+            <p class="text-slate-400">Website redesign</p>
+          </div>
+          <div class="justify-self-end">
+            <div class="mb-2 text-right font-bold text-sky-500">
+              <h4 class="font-bold">
+                <a href="#" class="hover:text-blue-600">View transaction</a>
+              </h4>
+            </div>
+            <p class="text-slate-400">
+              Website invoice <span class="text-slate-950">#012541</span>
+            </p>
+          </div>
+        </li>
+        <li class="grid grid-cols-[50px_repeat(3,_1fr)] py-4">
+          <i class="fa-solid fa-circle-up pt-1"></i>
+          <div>
+            <div class="mb-2 flex gap-x-4">
+              <h4 class="font-bold">$7,600.00</h4>
+              <div
+                class="rounded border-red-200 bg-red-50 px-2 text-xs font-bold text-red-600"
+              >
+                Overdue
+              </div>
+            </div>
+            <p class="text-slate-400">$500.00 tax</p>
+          </div>
+          <div>
+            <div class="mb-2 flex">
+              <h4 class="font-bold">Reform</h4>
+            </div>
+            <p class="text-slate-400">Website redesign</p>
+          </div>
+          <div class="justify-self-end">
+            <div class="mb-2 text-right font-bold text-sky-500">
+              <h4 class="font-bold">
+                <a href="#" class="hover:text-blue-600">View transaction</a>
+              </h4>
+            </div>
+            <p class="text-slate-400">
+              Website invoice <span class="text-slate-950">#012541</span>
+            </p>
+          </div>
+        </li>
+        <li class="grid grid-cols-[50px_repeat(3,_1fr)] py-4">
+          <i class="fa-solid fa-circle-up pt-1"></i>
+          <div>
+            <div class="mb-2 flex gap-x-4">
+              <h4 class="font-bold">$7,600.00</h4>
+              <div
+                class="border-grey-200 bg-grey-50 text-grey-600 rounded px-2 text-xs font-bold"
+              >
+                Withdraw
+              </div>
+            </div>
+            <p class="text-slate-400">$500.00 tax</p>
+          </div>
+          <div>
+            <div class="mb-2 flex">
+              <h4 class="font-bold">Reform</h4>
+            </div>
+            <p class="text-slate-400">Website redesign</p>
+          </div>
+          <div class="justify-self-end">
+            <div class="mb-2 text-right font-bold text-sky-500">
+              <h4 class="font-bold">
+                <a href="#" class="hover:text-blue-600">View transaction</a>
+              </h4>
+            </div>
+            <p class="text-slate-400">
+              Website invoice <span class="text-slate-950">#012541</span>
+            </p>
+          </div>
+        </li>
+      </ul>
+      <p class="mb-2 border-b border-t bg-gray-50 px-12 py-2 font-bold">
+        Yesterday
+      </p>
+      <ul class="px-12">
+        <li class="grid grid-cols-[50px_repeat(3,_1fr)] py-4">
+          <i class="fa-solid fa-circle-up pt-1"></i>
+          <div>
+            <div class="mb-2 flex gap-x-4">
+              <h4 class="font-bold">$7,600.00</h4>
+              <div
+                class="rounded border-green-200 bg-green-50 px-2 text-xs font-bold text-green-600"
+              >
+                Paid
+              </div>
+            </div>
+            <p class="text-slate-400">$500.00 tax</p>
+          </div>
+          <div>
+            <div class="mb-2 flex">
+              <h4 class="font-bold">Reform</h4>
+            </div>
+            <p class="text-slate-400">Website redesign</p>
+          </div>
+          <div class="justify-self-end">
+            <div class="mb-2 text-right font-bold text-sky-500">
+              <h4 class="font-bold">
+                <a href="#" class="hover:text-blue-600">View transaction</a>
+              </h4>
+            </div>
+            <p class="text-slate-400">
+              Website invoice <span class="text-slate-950">#012541</span>
+            </p>
+          </div>
+        </li>
+        <li class="grid grid-cols-[50px_repeat(3,_1fr)] py-4">
+          <i class="fa-solid fa-circle-up pt-1"></i>
+          <div>
+            <div class="mb-2 flex gap-x-4">
+              <h4 class="font-bold">$7,600.00</h4>
+              <div
+                class="rounded border-red-200 bg-red-50 px-2 text-xs font-bold text-red-600"
+              >
+                Overdue
+              </div>
+            </div>
+            <p class="text-slate-400">$500.00 tax</p>
+          </div>
+          <div>
+            <div class="mb-2 flex">
+              <h4 class="font-bold">Reform</h4>
+            </div>
+            <p class="text-slate-400">Website redesign</p>
+          </div>
+          <div class="justify-self-end">
+            <div class="mb-2 text-right font-bold text-sky-500">
+              <h4 class="font-bold">
+                <a href="#" class="hover:text-blue-600">View transaction</a>
+              </h4>
+            </div>
+            <p class="text-slate-400">
+              Website invoice <span class="text-slate-950">#012541</span>
+            </p>
+          </div>
+        </li>
+        <li class="grid grid-cols-[50px_repeat(3,_1fr)] py-4">
+          <i class="fa-solid fa-circle-up pt-1"></i>
+          <div>
+            <div class="mb-2 flex gap-x-4">
+              <h4 class="font-bold">$7,600.00</h4>
+              <div
+                class="border-grey-200 bg-grey-50 text-grey-600 rounded px-2 text-xs font-bold"
+              >
+                Withdraw
+              </div>
+            </div>
+            <p class="text-slate-400">$500.00 tax</p>
+          </div>
+          <div>
+            <div class="mb-2 flex">
+              <h4 class="font-bold">Reform</h4>
+            </div>
+            <p class="text-slate-400">Website redesign</p>
+          </div>
+          <div class="justify-self-end">
+            <div class="mb-2 text-right font-bold text-sky-500">
+              <h4 class="font-bold">
+                <a href="#" class="hover:text-blue-600">View transaction</a>
+              </h4>
+            </div>
+            <p class="text-slate-400">
+              Website invoice <span class="text-slate-950">#012541</span>
+            </p>
+          </div>
+        </li>
+      </ul>
     </div>
   </body>
 </html>
